Fix site title alignment

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -15,7 +15,7 @@
     letter-spacing: 2px;
     font-size: 14px;
   a {
-      padding: 16px 20px;
+      padding: 20px;
       margin-left: -20px;
     display: inline-block;
       position: relative;
